<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraARActivity"
    android:background="@color/cream">

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:scaleType="fitCenter"
        android:src="@drawable/no_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraXButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:text="@string/camera_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_gender"
        app:layout_constraintVertical_bias="0.056"

        />

    <com.example.firtuka2.ui.decoration.Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/upload_gambar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraXButton"
        app:layout_constraintVertical_bias="0.183"

        />

    <EditText
        android:id="@+id/edit_gender"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="64dp"

        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:background="@color/white"
        android:gravity="top|start"
        android:hint="@string/addDesc"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="5"
        android:minLines="4"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_preview" />


</androidx.constraintlayout.widget.ConstraintLayout>